core/codegen/tests/ui-fail/catchers.stderr
error: expected `,`
 --> $DIR/catchers.rs:6:25
  |
6 |     let _ = catchers![a b]; //~ ERROR expected
  |                         ^

error: expected identifier
 --> $DIR/catchers.rs:8:26
  |
8 |     let _ = catchers![a::, ]; //~ ERROR expected identifier
  |                          ^

error: unexpected end of input, expected identifier
 --> $DIR/catchers.rs:9:13
  |
9 |     let _ = catchers![a::]; //~ ERROR expected identifier
  |             ^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

